@@ -1,4 +1,7 @@
 2017-01-18 Christophe Ramananjaona <isloux AT yahoo.co.uk>
+ * Added function to create the slope histogram
+
+2017-01-18 Christophe Ramananjaona <isloux AT yahoo.co.uk>
  * Added date output and function to get ticker names
 
 2016-04-11 Christophe Ramananjaona <isloux AT yahoo.co.uk>
